--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,11 +71,11 @@
 
 .grid {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   flex-wrap: wrap;
   max-width: 800px;
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 .card {
