--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -31,6 +31,13 @@
   text-align: center;
 }
 
+.projectsHd {
+  font-size: 1.5rem;
+  line-height: 1;
+  text-align: center;
+  margin-top: 3rem 0;
+}
+
 .borderCircle {
   border-radius: 9999px;
 }
